--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "sass": "^1.80.6"
   },
   "devDependencies": {
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
