--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.4.0",
     "gray-matter": "^4.0.3",
     "markdown-it": "^14.1.0",
     "next": "15.0.2",
