--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.4.0",
+    "@vercel/speed-insights": "^1.1.0",
     "gray-matter": "^4.0.3",
     "markdown-it": "^14.1.0",
     "next": "15.0.2",
