--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@vercel/speed-insights": "^1.1.0",
     "gray-matter": "^4.0.3",
     "markdown-it": "^14.1.0",
+    "motion": "^11.11.15",
     "next": "15.0.2",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react": "^18",
+    "react-dom": "^18",
     "sass": "^1.80.6"
   },
   "devDependencies": {
