--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,10 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "i18n.js"
+    "i18n.ts",
+    "app/components/AnimatedWelcome.js",
+    "app/components/WelcomeSign.js",
+    "app/[locale]/layout.js"
   ],
   "exclude": ["node_modules"]
 }
