--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "15.0.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "sass": "^1.80.6"
   },
   "devDependencies": {
