--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "@vercel/analytics": "^1.4.0",
     "@vercel/speed-insights": "^1.1.0",
     "gray-matter": "^4.0.3",
-    "markdown-it": "^14.1.0",
     "motion": "^11.11.15",
     "next": "15.0.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-markdown": "^9.0.1",
     "sass": "^1.80.6"
   },
   "devDependencies": {
